--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 :root {
-  --primary-text-color: #434455;
   --title-text-color: #2e2f42;
+  --primary-text-color: #434455;
   --secondary-text-color: #ffffff;
+  --accent-color: #4d5ae5;
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #2e2f42;
-  --accent-color: #4d5ae5;
+  --tertiary-bg-color: #f4f4fd;
+  --footer-title-color: #f4f4fd;
+  --footer-text-color: #e7e9fc;
 }
 
 /*--------------- Body -----------------*/
@@ -23,9 +26,25 @@ body {
   text-decoration: none;
 }
 
-.header-link.link.link-current {
-  color: var(--accent-color);
+.link:hover,
+.link:focus {
+  text-decoration: underline;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*--- Header ---*/
 
 .header-logo {
@@ -41,13 +60,6 @@ body {
   color: var(--accent-color);
 }
 
-.header-logo:hover,
-.header-logo-accent:hover,
-.header-logo:focus,
-.header-logo-accent:focus {
-  background-color: var(--secondary-bg-color);
-}
-
 /* Header Navigation */
 
 .header-link {
@@ -56,6 +68,10 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.header-link.link.link-current {
+  color: var(--accent-color);
 }
 
 /* Header Contacts */
@@ -68,9 +84,134 @@ body {
 .header-contact-tel {
   color: var(--primary-text-color);
   font-size: 16px;
-  line- height: 1.5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
 /* --- HERO --- */
 
+.hero {
+  background-color: var(--secondary-bg-color);
+}
+
+.hero-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  background-color: var(--secondary-bg-color);
+}
+
+.hero-button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  border: none;
+}
+
+/* --- Strategy --- */
+
+.strategy {
+}
+.strategy-tiltle {
+}
+.stretegy-list {
+}
+.list {
+}
+.stretegy-item {
+}
+.stategy-item-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+.strategy-item-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+/* --- ABOUT --- */
+
+.about {
+}
+.about-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--title-text-color);
+}
+.about-list {
+}
+
+.about-item {
+}
+
+/* --- TEAM --- */
+
+.team {
+  background-color: var(--tertiary-bg-color);
+}
+.team-title {
+}
+.team-list {
+}
+.team-member {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+.team-member-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+.team-item {
+}
+
+/* --- FOOTER--- */
+
+.footer {
+  background-color: var(--secondary-bg-color);
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  color: var(--footer-title-color);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.footer-logo-accent {
+  color: var(--accent-color);
+}
+
+.footer-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--footer-text-color);
+}
