--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   --footer-title-color: #f4f4fd;
   --footer-text-color: #e7e9fc;
   --header-border-color: #e7e9fc;
+  --button-active-color: #404bbf;
 }
 
 /*--------------- Body -----------------*/
@@ -40,6 +41,23 @@ body {
   letter-spacing: 0.04em;
   text-transform: capitalize;
   border-radius: 4px;
+  cursor: pointer;
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.button:hover {
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.button:active {
+  color: var(--secondary-text-color);
+  background: var(--button-active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .logo-text {
@@ -111,8 +129,11 @@ body {
   font-style: normal;
 }
 
-.header-contact-email,
-.header-contact-tel {
+.header-contact-email:hover,
+.header-contact-tel:hover,
+.header-contact-email:focus,
+.header-contact-tel:focus {
+  color: var(--accent-color);
 }
 
 /* --- HERO --- */
@@ -131,9 +152,6 @@ body {
 }
 
 .hero-button {
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
-  border: none;
 }
 
 /* --- Strategy --- */
