--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,20 @@
 :root {
-  --title-text-color: #2e2f42;
-  --primary-text-color: #434455;
-  --secondary-text-color: #ffffff;
-  --accent-color: #4d5ae5;
-  --primary-bg-color: #ffffff;
-  --secondary-bg-color: #2e2f42;
-  --tertiary-bg-color: #f4f4fd;
-  --footer-title-color: #f4f4fd;
-  --footer-text-color: #e7e9fc;
-  --header-border-color: #e7e9fc;
-  --button-active-color: #404bbf;
+  --primary-color: #ffffff;
+  --primary-brand-color: #4d5ae5;
+  --pressed-state-color: #404bbf;
+  --dark-color: #2e2f42;
+  --success-color: #31d0aa;
+  --text-color: #434455;
+  --subtle-text-color: #8e8f99;
+  --accent-color: #e7e9fc;
+  --light-color: #f4f4fd;
 }
 
 /*--------------- Body -----------------*/
 
 body {
-  background-color: var(--primary-bg-color);
-  color: var(--primary-text-color);
+  background-color: var(--primary-color);
+  color: var(--text-color);
   font-family: "Roboto", sans-serif;
 }
 
@@ -42,21 +40,21 @@ body {
   text-transform: capitalize;
   border-radius: 4px;
   cursor: pointer;
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
+  color: var(--primary-color);
+  background-color: var(--primary-brand-color);
   border: none;
 }
 
 .button:hover {
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
+  color: var(--primary-color);
+  background-color: var(--primary-brand-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .button:active {
-  color: var(--secondary-text-color);
-  background: var(--button-active-color);
+  color: var(--primary-color);
+  background: var(--pressed-state-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -66,7 +64,7 @@ body {
   font-size: 18px;
   line-height: 1.3;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: var(--text-color);
 }
 
 .subtitle-text {
@@ -74,14 +72,14 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
+  color: var(--dark-color);
 }
 
 .regular-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: var(--text-color);
 }
 
 .visually-hidden {
@@ -101,26 +99,26 @@ body {
 /*--- Header ---*/
 
 .header {
-  background-color: var(--primary-bg-color);
-  border-color: var(--header-border-color);
+  background-color: var(--primary-color);
+  border-color: var(--accent-color);
 }
 
 .header-logo {
 }
 
 .header-logo-accent {
-  color: var(--accent-color);
+  color: var(--primary-brand-color);
 }
 
 /* Header Navigation */
 
 .header-link {
   font-weight: 500;
-  color: var(--title-text-color);
+  color: var(--dark-color);
 }
 
 .header-link.link.link-current {
-  color: var(--accent-color);
+  color: var(--primary-brand-color);
 }
 
 /* Header Contacts */
@@ -133,13 +131,13 @@ body {
 .header-contact-tel:hover,
 .header-contact-email:focus,
 .header-contact-tel:focus {
-  color: var(--accent-color);
+  color: var(--primary-brand-color);
 }
 
 /* --- HERO --- */
 
 .hero {
-  background-color: var(--secondary-bg-color);
+  background-color: var(--dark-color);
 }
 
 .hero-title {
@@ -147,8 +145,8 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  background-color: var(--secondary-bg-color);
+  color: var(--primary-color);
+  background-color: var(--dark-color);
 }
 
 .hero-button {
@@ -178,7 +176,7 @@ body {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: var(--title-text-color);
+  color: var(--dark-color);
 }
 .about-list {
 }
@@ -189,7 +187,7 @@ body {
 /* --- TEAM --- */
 
 .team {
-  background-color: var(--tertiary-bg-color);
+  background-color: var(--light-color);
 }
 .team-title {
 }
@@ -205,19 +203,19 @@ body {
 /* --- FOOTER--- */
 
 .footer {
-  background-color: var(--secondary-bg-color);
+  background-color: var(--dark-color);
 }
 
 .footer-logo {
-  color: var(--footer-title-color);
+  color: var(--light-color);
 }
 
 .footer-logo-accent {
-  color: var(--accent-color);
+  color: var(--primary-brand-color);
 }
 
 .footer-text {
-  color: var(--footer-text-color);
+  color: var(--accent-color);
 }
 
 /* ------------- PORTFOLIO -------------- */
@@ -236,8 +234,8 @@ body {
 .portfolio-filter-item {
 }
 .portfolio-filter-button {
-  color: var(--accent-color);
-  background-color: var(--tertiary-bg-color);
+  color: var(--primary-brand-color);
+  background-color: var(--light-color);
   border: 1px solid #e7e9fc;
 }
 
@@ -255,11 +253,11 @@ body {
 }
 .ourwork-subtitle {
   text-transform: capitalize;
-  color: var(--title-text-color);
+  color: var(--dark-color);
 }
 .ourwork-category {
 }
 .ourwork-description {
-  color: var(--footer-title-color);
-  background-color: var(--accent-color);
+  color: var(--light-color);
+  background-color: var(--primary-brand-color);
 }
