add small improvements

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
   --subtle-text-color: #8e8f99;
   --accent-color: #e7e9fc;
   --light-color: #f4f4fd;
+  --modal-overlay-color: #2e2f4266;
+  --hero-bckgrnd-color: #2e2f42b2;
 }
 
 /*--------------- Body -----------------*/
